<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/topBar"
    android:layout_height="140dp">


    <TextView
        android:text="@string/username"
        android:textColor="@color/topBarText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/navigation_username"
        android:layout_alignParentTop="true"
        android:layout_marginTop="75dp"
        android:layout_marginLeft="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textStyle="bold"
        android:textSize="20dp"/>


    <TextView
        android:text="@string/user_email"
        android:textColor="@color/topBarText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="50dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="110dp"
        android:id="@+id/navigation_email" />


    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"
        android:background="@drawable/round_button"
        android:gravity="center_vertical|center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:layout_toEndOf="@+id/navigation_email"
        android:layout_toRightOf="@+id/navigation_email"
        app:srcCompat="@android:drawable/ic_menu_camera" />


</RelativeLayout>